--- a/book.html
+++ b/book.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Appointment<-Bike Eazy</title>
+    <title>Contact Us<-Bike Eazy</title>
     <link rel="icon" type="image/png" href="./img/symbol.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
@@ -74,58 +74,240 @@
             font-size: 0.9rem;
             color: #666;
         }
+        .site {
+            display: none;
+        }
+        .site.active {
+            display: block;
+        }
+        .switch-btn {
+            margin-bottom: 20px;
+        }
+        .gmail{
+            background: #fff;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+        .gmail-header {
+            background-color: #ffffff;
+            padding: 10px 20px;
+            border-bottom: 1px solid #dadce0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .gmail-header h1 {
+            font-size: 20px;
+            margin: 0;
+            color: #202124;
+        }
+        .fullscreen {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
+<!--- Main Site --->
+<div id="siteM" class="site active">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+        <div class="container-fluid flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                    <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
+                    <span class="fw-bold fs-4">Contact Us</span>
+                </a>
+                <div class="d-flex flex-wrap align-items-center gap-3">
+                    <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
+                    <span class="infoBox">(613) 555-9283</span>
+                </div>
+            </div>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light sticky-top">
-    <div class="container-fluid flex-column align-items-start">
-        <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
-                <span class="fw-bold fs-4">Book Appointment</span>
-            </a>
-            <div class="d-flex flex-wrap align-items-center gap-3">
-                <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
-                <span class="infoBox">(613) 555-9283</span>
+            <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navToggle">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse w-100" id="navToggle">
+                <ul class="navbar-nav d-flex align-items-start gap-3">
+                    <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                        <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                            <li><a class="dropdown-item" href="./services">Our Goal</a></li>
+                            <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
+                            <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
+                            <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                        <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                            <li><a class="dropdown-item" href="./about">Mission</a></li>
+                            <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
+                            <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
+                            <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
+                            <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="./contact">Contact</a></li>
+                </ul>
+                <div class="ms-auto">
+                    <a class="btn buttonBox" href="./location">Hour of Operation</a>
+                </div>
             </div>
         </div>
+    </nav>
+    <!-- Main Content -->
+    <div class="container my-5">
+        <div class="row g-4">
+            <!-- Map Section -->
+            <div class="col-lg-6">
+                <div class="card-section h-100">
+                    <h4>Find Us on the Map</h4>
+                    <div class="ratio ratio-4x3 rounded">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.931710567225!2d-75.68925238444316!3d45.42753134491215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0503f7bd93d9%3A0xb3d18b0c2eb804ed!2s145%20Rideau%20St%2C%20Ottawa%2C%20ON%20K1N%205X4!5e0!3m2!1sen!2sca!4v1629927275842!5m2!1sen!2sca"
+                            style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
 
-        <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navToggle">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <!-- Info Section -->
+            <div class="col-lg-6">
+                <div class="card-section h-100">
+                    <h4>Location</h4>
+                    <p>145 Rideau Street, Suite 210<br>Ottawa, ON K1N 5X4<br>Canada</p>
 
-        <div class="collapse navbar-collapse w-100" id="navToggle">
-            <ul class="navbar-nav d-flex align-items-start gap-3">
-                <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-                    <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                        <li><a class="dropdown-item" href="./services">Our Goal</a></li>
-                        <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
-                        <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
-                        <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
-                    <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                        <li><a class="dropdown-item" href="./about">Mission</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="./contact">Contact Us</a></li>
-            </ul>
-            <div class="ms-auto">
-                <a class="btn buttonBox" href="./location">Hour of Operation</a>
+                    <h4>Contact</h4>
+                    <p><strong>Phone:</strong> (613) 555-9283</p>
+                    <p><strong>Email:</strong> info@bikeeazy.ca</p>
+                    <p><strong>Instagram:</strong> @bikeeazy.ottawa</p>
+                    <form id="subForm">
+                        <div class="mb-3">
+                            <label for="userName" class="form-label">Your Name</label>
+                            <input type="text" id="userName" class="form-control" placeholder="First Name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="userEmail" class="form-label">Your Email</label>
+                            <input type="email" id="userEmail" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="userPhone" class="form-label">Your Phone Number</label>
+                            <input type="phone" id="userPhone" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Any Comments</label>
+                            <input type="message" id="message" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-primary"> Subscribe For Event </button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</nav>
+
+    <!-- Footer -->
+    <footer class="text-center py-4">
+        <p>Designed by Pierre Georges • © 2025 QuickCycle Repairs</p>
+        <a href="https://pierre252004.github.io/Portfolio/">Pierre's portfolio</a>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</div>
+
+<!--- Email --->
+<div id="email" class="site gmail">
+    <div class="gmail-header">
+        <h1>Gmail</h1>
+        <span id="mailDisplay"></span>
+    </div>
+
+    <div>
+        <button onclick="goBack()" class="btn-gmail">Back</button>
+        <button  class="btn-gmail">Archive</button>
+        <button class="btn-gmail">Delete</button>
+        <button class="btn-gmail">Mark as unread</button>
+    </div>
+
+    <div class="email-content">
+        <div class="email-title">Your Subscription is Confirmed!</div>
+        <div class="email-meta">
+            <div class="sender-info">
+                <strong>Bike Eazy</strong> &lt;info@bikeeazy.ca&gt;<br>
+                to me
+            </div>
+            <div class="timestamp">
+                Jun 8, 2025, 10:04 AM
+            </div>
+        </div>
+
+        <div class="email-body">
+            Hi <span id="nameDisplay"></span>,<br><br>
+            Thank you for Subscribing with <strong>Bike Eazy</strong>! We're excited to keep you update with future information.<br><br>
+            <strong>Please verify your information:</strong><br>
+            <strong>Your name:</strong> <span id="name1Display"></span><br>
+            <strong>Your phone:</strong> <span id="phoneDisplay"></span><br><br>
+
+            <strong>Comment:</strong><br><span id="messageDisplay"></span><br><br>
+            Ride safe!<br>
+            – The Bike Eazy Team 🚴
+        </div>
+
+        <div class="reply-buttons">
+            <button class="btn-gmail">Reply</button>
+            <button class="btn-gmail">Forward</button>
+        </div>
+    </div>
+</div>
+
+<script>
+    const form = document.getElementById('subForm');
+    const siteM = document.getElementById('siteM');
+    const email = document.getElementById('email');
+    const nameDisplay = document.getElementById('nameDisplay');
+    const name1Display = document.getElementById('name1Display');
+    const mailDisplay = document.getElementById('mailDisplay');
+    const phoneDisplay = document.getElementById('phoneDisplay');
+    const messageDisplay =  document.getElementById('messageDisplay');
+
+    form.addEventListener('submit', function(event) {
+        event.preventDefault();
+
+        const name = document.getElementById('userName').value;
+        const mail = document.getElementById('userEmail').value;
+        const phone = document.getElementById('userPhone').value;
+        const message = document.getElementById('message').value;
+
+        if (message == ''){
+            messageDisplay.textContent = 'N.A.';
+        }
+        else{
+            messageDisplay.textContent = message;
+        }
+
+        nameDisplay.textContent = name;
+        name1Display.textContent = name;
+        mailDisplay.textContent = mail;
+        phoneDisplay.textContent = phone;
+
+        siteM.classList.remove('active');
+        email.classList.add('active');
+    });
+
+    function goBack() {
+        email.classList.remove('active');
+        siteM.classList.add('active');
+    }
+</script>
 
 </body>
 </html>
