--- a/contact.html
+++ b/contact.html
@@ -76,16 +76,39 @@
         }
         .site {
             display: none;
-            background: #fff;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.1);
         }
         .site.active {
             display: block;
         }
         .switch-btn {
             margin-bottom: 20px;
+        }
+        .gmail{
+            background: #fff;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+        .gmail-header {
+            background-color: #ffffff;
+            padding: 10px 20px;
+            border-bottom: 1px solid #dadce0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .gmail-header h1 {
+            font-size: 20px;
+            margin: 0;
+            color: #202124;
+        }
+        .fullscreen {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
@@ -168,19 +191,23 @@
                     <p><strong>Email:</strong> info@bikeeazy.ca</p>
                     <p><strong>Instagram:</strong> @bikeeazy.ottawa</p>
                     <form id="subForm">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" required><br><br>
-
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" required><br><br>
-
-                        <label for="phone">Phone:</label>
-                        <input type="phone" id="phone" required><br><br>
-
-                        <label for="message">Comment:</label><br>
-                        <textarea id="message" rows="5" required></textarea><br><br>
-
-                        <input type="submit" value="Subscribe For Future">
+                        <div class="mb-3">
+                            <label for="userName" class="form-label">Your Name</label>
+                            <input type="text" id="userName" class="form-control" placeholder="First Name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="userEmail" class="form-label">Your Email</label>
+                            <input type="email" id="userEmail" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="userPhone" class="form-label">Your Phone Number</label>
+                            <input type="phone" id="userPhone" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Any Comments</label>
+                            <input type="message" id="message" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-primary"> Subscribe For Event </button>
                     </form>
                 </div>
             </div>
@@ -196,6 +223,91 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </div>
+
+<!--- Email --->
+<div id="email" class="site gmail">
+    <div class="gmail-header">
+        <h1>Gmail</h1>
+        <span id="mailDisplay"></span>
+    </div>
+
+    <div>
+        <button onclick="goBack()" class="btn-gmail">Back</button>
+        <button  class="btn-gmail">Archive</button>
+        <button class="btn-gmail">Delete</button>
+        <button class="btn-gmail">Mark as unread</button>
+    </div>
+
+    <div class="email-content">
+        <div class="email-title">Your Subscription is Confirmed!</div>
+        <div class="email-meta">
+            <div class="sender-info">
+                <strong>Bike Eazy</strong> &lt;info@bikeeazy.ca&gt;<br>
+                to me
+            </div>
+            <div class="timestamp">
+                Jun 8, 2025, 10:04 AM
+            </div>
+        </div>
+
+        <div class="email-body">
+            Hi <span id="nameDisplay"></span>,<br><br>
+            Thank you for Subscribing with <strong>Bike Eazy</strong>! We're excited to keep you update with future information.<br><br>
+            <strong>Please verify your information:</strong><br>
+            <strong>Your name:</strong> <span id="name1Display"></span><br>
+            <strong>Your phone:</strong> <span id="phoneDisplay"></span><br><br>
+
+            <strong>Comment:</strong><br><span id="messageDisplay"></span><br><br>
+            Ride safe!<br>
+            – The Bike Eazy Team 🚴
+        </div>
+
+        <div class="reply-buttons">
+            <button class="btn-gmail">Reply</button>
+            <button class="btn-gmail">Forward</button>
+        </div>
+    </div>
+</div>
+
+<script>
+    const form = document.getElementById('subForm');
+    const siteM = document.getElementById('siteM');
+    const email = document.getElementById('email');
+    const nameDisplay = document.getElementById('nameDisplay');
+    const name1Display = document.getElementById('name1Display');
+    const mailDisplay = document.getElementById('mailDisplay');
+    const phoneDisplay = document.getElementById('phoneDisplay');
+    const messageDisplay =  document.getElementById('messageDisplay');
+
+    form.addEventListener('submit', function(event) {
+        event.preventDefault();
+
+        const name = document.getElementById('userName').value;
+        const mail = document.getElementById('userEmail').value;
+        const phone = document.getElementById('userPhone').value;
+        const message = document.getElementById('message').value;
+
+        if (message == ''){
+            messageDisplay.textContent = 'N.A.';
+        }
+        else{
+            messageDisplay.textContent = message;
+        }
+
+        nameDisplay.textContent = name;
+        name1Display.textContent = name;
+        mailDisplay.textContent = mail;
+        phoneDisplay.textContent = phone;
+
+        siteM.classList.remove('active');
+        email.classList.add('active');
+    });
+
+    function goBack() {
+        email.classList.remove('active');
+        siteM.classList.add('active');
+    }
+</script>
 
 </body>
 </html>
